二回目のコミット

--- a/WebContent/MyFavorite.html
+++ b/WebContent/MyFavorite.html
@@ -25,7 +25,7 @@
 			<ul id="menu">
 				<li><a href="index.html">Top</a></li>
 				<li><a href="MyProfile.html">My Profile</a></li>
-				<li><a href="Myfavorite.html">My Favorite</a></li>
+				<li><a href="MyFavorite.html">My Favorite</a></li>
 				<li><a href="index.html#area4">Contact</a></li>
 			</ul>
 		</nav>
