--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,7 @@
 				<ul id="menu">
 					<li data-menuanchor="area1"><a href="#area1">Top</a></li>
 					<li><a href="MyProfile.html">My Profile</a></li>
-					<li><a href="Myfavorite.html">My Favorite</a></li>
+					<li><a href="MyFavorite.html">My Favorite</a></li>
 					<li data-menuanchor="area4"><a href="#area4">Contact</a></li>
 				</ul>
 			</nav>
